CI/lib/api/kubernetes/data/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    describe: test001
  name: feng-test-20121119-002
  namespace: fengtest
  labels:
    app: feng-test-20121119-002
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feng-test-20121119-002
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: feng-test-20121119-002

    spec:
      imagePullSecrets: []
      containers:
      - env: []
        image: nginx:latest
        imagePullPolicy: Always
        name: fengtest001
        resources:
          limits:
            cpu: '2'
            memory: 2048M
          requests:
            cpu: '1'
            memory: 1024M
      terminationGracePeriodSeconds: 30
