CI/lib/api/kubernetes/data/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: demo
  namespace: default
spec:
  clusterIP: ""
  ports:
  - name: port1
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    foo: abc
  type: ClusterIP
