CI/lib/api/kubernetes/data/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
#  annotations:
#    foo: abc
#  labels:
#    bar: efg
  name: demo
  namespace: default
spec:
  rules:
  - host: open-c3.abc.mydan.org
    http:
      paths:
      - backend:
          serviceName: demo
          servicePort: 80
        path: /api/demo
        pathType: Prefix
#  tls:
#  - hosts:
#    - open-c3.abc.mydan.org
#    secretName: test111111
